fix: vertical card spacing

--- a/app/themes/hunger-tv/assets/styles/components/card.scss
+++ b/app/themes/hunger-tv/assets/styles/components/card.scss
@@ -7,7 +7,6 @@
 	flex-direction: column;
 	justify-content: space-between;
 	text-align: center;
-	height: 100%;
 
 	a {
 		position: relative;
@@ -80,5 +79,12 @@
 		width: 100%;
 		height: 100%;
 		@include content-gradient;
+	}
+}
+
+@media (min-width: $md-min) {
+	.card {
+		height: calc(100% - #{rhythm()});
+		margin-bottom: rhythm();
 	}
 }
